--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,19 @@
+@font-face {
+  font-family: "Protest Strike";
+  src:url("./src/assets/fonts/ProtestStrike-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Protest Strike";
+  src:url("./assets/fonts/Roboto.ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  min-width: 0;
+  font-family: Roboto;
+  font-weight: bold;
 }
 
 hr {
@@ -26,3 +38,4 @@ body {
 html {
   margin-top: 76px;
 }
+
