Adição de fonte e fundo dos cards

--- a/src/pages/PokemonList/pokemonlist.css
+++ b/src/pages/PokemonList/pokemonlist.css
@@ -74,6 +74,9 @@
   justify-content: flex-end;
   align-items: flex-end;
   align-content: flex-end;
+  font-family: "Protest Strike";
+  font-style: normal;
+  font-weight: bold;
 }
 
 .pagination-buttons {
