--- a/src/pages/PokemonList/pokemonlist.css
+++ b/src/pages/PokemonList/pokemonlist.css
@@ -46,8 +46,8 @@
 }
 
 .pokemon-card:hover > #pokemon-img {
-  width: calc(20dvw - 25%);
-  height: calc(20dvh - 25%);
+  width: 15dvh;
+  height: 15dvh;
 }
 
 #pokemon-img {
@@ -55,8 +55,8 @@
   top: calc(50% + 1rem);
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 10dvw;
-  height: 10dvh;
+  width: 12dvh;
+  height: 12dvh;
   transition: width 0.3s ease-in-out,
               height 0.3s ease-in-out;
 }
@@ -66,6 +66,7 @@
   font-family: "Protest Strike";
   font-style: normal;
   font-weight: 100;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #pokemon-id {
@@ -77,51 +78,7 @@
   font-family: "Protest Strike";
   font-style: normal;
   font-weight: bold;
-}
-
-.pagination-buttons {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #3A463E;
-  z-index: 2;
-  padding: 15px 0 15px 0;
-}
-
-.pagination-button {
-  text-align: center;
-  align-self: center;
-  justify-self: center;
-  border: none;
-  background-color: #698880;
-  border-radius: 25px;
-  color: #c4c8c5;
-  padding: 3px 10.5px;
-  box-shadow: inset 0 0 0 0 #2ACCAD;
-  transition: color 0.3s ease-in-out, box-shadow 0.5s ease-in-out, background-color 0.6s;
-  font-size: 0.75rem;
-}
-
-.pagination-button:hover {
-  box-shadow: inset 125px 0 0 0 #2ACCAD;
-  color: #F9F7F9 !important;
-  background-color: #F9F7F9 !important;
-}
-
-#pagination-number {
-  padding: 5px 15px 5px 15px;
-  margin: 0 2px 0 2px;
-}
-
-#pagination-previous {
-  margin-right: 2px;
-}
-
-#pagination-next {
-  margin-left: 2px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .pokemon-card h3 {
